namespaces/knotdns/knotdns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knotdns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knotdns
  namespace: knotdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knotdns
  template:
    metadata:
      labels:
        app: knotdns
    spec:
      containers:
        - name: knotdns
          image: docker.io/cznic/knot:latest
          resources:
            limits:
              memory: "48Mi"
              cpu: "100m"
          args:
            - "/sbin/knotd"
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          livenessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
            - name: storage
              mountPath: /storage
      volumes:
        - name: config
          emptyDir: {}
        - name: storage
          persistentVolumeClaim:
            claimName: knotdns-storage-pvc
        - name: init-storage-data
          secret:
            secretName: knotdns-init-storage-secret
---
apiVersion: v1
kind: Service
metadata:
  name: knotdns-udp
  namespace: knotdns
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.140
    metallb.universe.tf/allow-shared-ip: knotdns
spec:
  selector:
    app: knotdns
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: knotdns-tcp
  namespace: knotdns
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.140
    metallb.universe.tf/allow-shared-ip: knotdns
spec:
  selector:
    app: knotdns
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
  type: LoadBalancer
